2004-02-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx, src/pipeline.cxx:
  - Typedef-wrapped container types to reduce std::pair<> trouble
  - Should fix SUN Workshop problems (thanks Jon Meinecke)
2004-02-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/binarystring.hxx, include/pqxx/libcompiler.h,
 include/pqxx/libconfig.h.in, include/pqxx/result.hxx, test/test062.cxx:
  - Added check for functional reverse_iterator template
  - Skip reverse_iterator typedefs & functions if template not available
  - VC7 workaround implies no functional reverse_iterator template
2004-02-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/libcompiler.h:
  - Documented PGSTD
 include/pqxx/result.hxx:
  - Added reverse_iterator
 include/util.hxx:
  - Documented pqxx::internal so that Doxygen picks it up
 README-UPGRADE:
  - Documented 2.2.0 changes
 src/cachedresult.cxx:
  - SUN Workshop compiler fix, thanks Jon Meinecke
2004-01-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Documented exception guarantees
  - Added throw () here or there
  - Made process_notice() throw ()
  - More work on process_notice() robustness
2004-01-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - process_notice() can handle messages without the trailing newline
2004-01-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Added lost patch from Arjen to generate pqxx-config
 include/pqxx/result.hxx:
  - Added reverse_iterator support
2004-01-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Changed default installation prefix to /usr/local, thanks Arjen Baart!
 Makefile.am:
  - Added bin_SCRIPTS (patch by Arjen Baart)
 pqxx-config.in:
  - New (Arjen Baart)
  - Similar to PostgreSQL pg_config script for configuration parameters
2004-01-25  Jeroen T. Vermeulen <jtv@xs4all.nl>