@@ -6,9 +6,10 @@
  - New field stream class: read result field as C++ stream
  - Separate namespace pqxx::internal for definitions not relevant to the user
  - More Windows compilation fixes
+ - SUN Workshop 6 compile fixes (thanks Jon Meinecke)
  - Implemented reverse_iterator for result class
  - Checks for functional std::reverse_iterator template
- - Makefile for MinGW compiler (thanks Pasquale Fersini)
+ - Preliminary Makefile for MinGW compiler (thanks Pasquale Fersini)
  - Changed the way unique<> works
  - Bugs fixed & test programs added
 2.1.3
